fix(java): JR-M6 + L1/L2/L3/L4 cleanup
M6: small proportional jitter on the Retry-After wait path so concurrent
    virtual-thread fan-out doesn't re-stampede the API (capped at 1s).
L1: evaluate-method Javadoc uses <code> not {@code}; Fields.toMap preserves
    insertion order; ThreadLocalRandom over shared Random for retry jitter.
L2: remove vestigial formula-gate flags + canary asserts, dead writer methods,
    dead Formulas.joinMapped, stale 'J-F3 dict-only' docstrings.
L3: README Java section — error handling, AutoCloseable, clear-a-field, filtering, upsert.
L4: live-test hygiene — close create-before-try leaks, discriminating TTL-expiry
    assertion, random-suffixed primaryKey, .env walker stops at repo root.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>